# dungeonpy

./: .gitignore  .~lock.DungeonPy.odt#  Add_fork.txt  Readme.md  build.sh  dm_cert.pem  dm_key.pem  dm_server.sh  dungeonpy.spec  generate_map.py  map_editor.py  player_connect.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_dnd_py.py  ~$utline.docx
.github/workflows/: build.yml
Code/: pymap_set.py  pymap_set_old.py  tracker.py  tracker_old.py
Core/: cert_utils.py  chat_window.py  combatant.py  game.py  log_utils.py  los.py  map_manager.py  player_chat_window.py  player_client.py  protocol.py  server.py  socket_bridge.py  tracker.py  ws_bridge.py
Data/: autosave_1.json  autosave_2.json  autosave_3.json  autosave_4.json  combat_tracker_2025-04-08_16-10-16.json  combat_tracker_example.json  last_loaded_tracker_path.json  selected_combatant.json
Docs/api/: index.html  run_dnd_py.html
Docs/api/Core/: cert_utils.html  los.html  map_manager.html  server.html  (+4 more)
Maps/: generated_dungeon.txt  open.txt  sad.txt  sample_created.txt  sample_dungeon_matrix_with_voids.txt  sample_dungeon_matrix_with_voids2.txt
Presentation/: Outline.docx
Savegames/: autosave_1.json  autosave_2.json  autosave_3.json  autosave_4.json  combat_tracker_20260501_100448.json  combat_tracker_example.json  example_screenshot.json  open_map.json
Tools/: token_composer.py
docs/: index.html
docs/api/: Core.html
tests/: test_combatant.py  test_los.py  test_player_client.py  test_protocol.py  test_regressions.py  test_server.py  test_server_map.py  test_tracker.py  test_ws_bridge.py
(+5 files in other folders)
